tests/snapshots/snapshots__compile_snapshots@union_basic.zts.snap
---
source: tests/snapshots.rs
expression: out.code
input_file: tests/fixtures/union_basic.zts
---
import { __ztsAbsurd } from "@zestty/core";
// Closed string-literal vocabulary: type + runtime values + type guard.
type DeleteOutcome = 'soft' | 'hard' | 'unknown';
const DeleteOutcome = {
    values: [
        'soft',
        'hard',
        'unknown'
    ] as const,
    has: (__ztsRaw: string): __ztsRaw is DeleteOutcome =>DeleteOutcome.values.indexOf(__ztsRaw as DeleteOutcome) !== -1
};
// The wire-normalizer nuisance this kills: has() narrows, no hand-listed
// literals, and the wildcard is the R8 fail-closed fallback.
export function toDeleteOutcome(raw: string): DeleteOutcome {
    return DeleteOutcome.has(raw) ? raw : 'unknown';
}
// Exhaustive literal match still applies — no wildcard needed on the
// closed side.
export function describe(o: DeleteOutcome): string {
    return ((__m)=>{
        if (__m === 'soft') {
            return 'kept';
        }
        if (__m === 'hard') {
            return 'gone';
        }
        if (__m === 'unknown') {
            return 'unclear';
        }
        return __ztsAbsurd(__m);
    })(o);
}
console.log(DeleteOutcome.values.length, describe(toDeleteOutcome('soft')));
